--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="gambar/logo.png" sizes="192x192">
     <link rel="apple-touch-icon" href="gambar/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katalog Website - Hadiah Spesial</title>
+    <title>Katalog Website - Kartu Ucapan</title>
     <style>
         /* CSS Reset */
         * {
@@ -307,6 +307,87 @@
                         <a href="pastel.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
+                    <div class="product-actions">
+                        <a href="pastelfoto.html" class="btn btn-beige">Dengan Foto</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Product 4 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="gambar/contoh3.png" alt="Greeting Card 4">
+                    <span class="product-badge">Terlaris</span>
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Graduation</h3>
+                    <p class="product-description">Kartu ucapan selamat wisuda untuk manusia kebannggaan disertai foto.</p>
+                    <div class="product-price">Rp 10.000</div>
+                    <div class="product-actions">
+                        <a href="wisuda.html" class="btn btn-beige">Preview</a>
+                        <button class="btn btn-pink">Beli Sekarang</button>
+                    </div>
+                    <div class="product-actions">
+                        <a href="wisudafoto.html" class="btn btn-beige">Dengan Foto</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Product 4 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="gambar/contoh7.png" alt="Greeting Card 7">
+                    <span class="product-badge">Terlaris</span>
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Monokrom</h3>
+                    <p class="product-description">Kartu ucapan selamat dengan tema monokrom.</p>
+                    <div class="product-price">Rp 10.000</div>
+                    <div class="product-actions">
+                        <a href="mamba.html" class="btn btn-beige">Preview</a>
+                        <button class="btn btn-pink">Beli Sekarang</button>
+                    </div>
+                    <div class="product-actions">
+                        <a href="mamba.html" class="btn btn-beige">Dengan Foto</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Product 5 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="gambar/contoh5.png" alt="Greeting Card 5">
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Envelope</h3>
+                    <p class="product-description">Surat yang menampilkan kertas berisi ucapan dan lagu.</p>
+                    <div class="product-price">Rp 10.000</div>
+                    <div class="product-actions">
+                        <a href="envelope.html" class="btn btn-beige">Preview</a>
+                        <button class="btn btn-pink">Beli Sekarang</button>
+                    </div>
+                    <div class="product-actions">
+                        <a href="envelopefoto.html" class="btn btn-beige">Dengan Foto</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Product 6 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="gambar/contoh6.png" alt="Greeting Card 6">
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Gold</h3>
+                    <p class="product-description">Kartu ucapan dengan desain elegan dan kemasan premium.</p>
+                    <div class="product-price">Rp 10.000</div>
+                    <div class="product-actions">
+                        <a href="gold.html" class="btn btn-beige">Preview</a>
+                        <button class="btn btn-pink">Beli Sekarang</button>
+                    </div>
+                    <div class="product-actions">
+                        <a href="goldfoto.html" class="btn btn-beige">Dengan Foto</a>
+                    </div>
                 </div>
             </div>
 
@@ -343,54 +424,7 @@
                 </div>
             </div>
         
-            <!-- Product 4 -->
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="gambar/contoh3.png" alt="Greeting Card 4">
-                    <span class="product-badge">Terlaris</span>
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Graduation</h3>
-                    <p class="product-description">Kartu ucapan selamat wisuda untuk manusia kebannggaan disertai foto.</p>
-                    <div class="product-price">Rp 10.000</div>
-                    <div class="product-actions">
-                        <a href="wisuda.html" class="btn btn-beige">Preview</a>
-                        <button class="btn btn-pink">Beli Sekarang</button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Product 5 -->
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="gambar/contoh5.png" alt="Greeting Card 5">
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Envelope</h3>
-                    <p class="product-description">Surat yang menampilkan kertas berisi ucapan dan lagu.</p>
-                    <div class="product-price">Rp 10.000</div>
-                    <div class="product-actions">
-                        <a href="envelope.html" class="btn btn-beige">Preview</a>
-                        <button class="btn btn-pink">Beli Sekarang</button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Product 6 -->
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="gambar/contoh6.png" alt="Greeting Card 6">
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Gold</h3>
-                    <p class="product-description">Kartu ucapan dengan desain elegan dan kemasan premium.</p>
-                    <div class="product-price">Rp 10.000</div>
-                    <div class="product-actions">
-                        <a href="gold.html" class="btn btn-beige">Preview</a>
-                        <button class="btn btn-pink">Beli Sekarang</button>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
     <div class="container">
