--- a/goldfoto.html
+++ b/goldfoto.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="gambar/logo.png" sizes="192x192">
     <link rel="apple-touch-icon" href="gambar/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elegant Gold</title>
+    <title>Elegant Gold with picture</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <style>
         * {
@@ -186,7 +186,7 @@
             max-width: 600px;
             height: 70vh;
             border: 1px solid #d4af37;
-            padding: 40px;
+            padding: 20px;
             position: relative;
             overflow-y: auto;
             scrollbar-width: thin;
@@ -303,6 +303,116 @@
                 font-size: 1rem;
             }
         }
+
+
+        :root {
+            --pastel-pink: #ffd6e0;
+            --pastel-mint: #c1f0d2;
+            --pastel-lavender: #d4c4fb;
+            --pastel-peach: #ffdac1;
+            --pastel-blue: #b5ead7;
+            --soft-gray: #f8f9fa;
+            --text-dark: #333333;
+            --text-light: #5a5a5a;
+        }
+        .gallery-container {
+            max-width: 1200px;
+            margin: 0px auto;
+            padding: 0 15px;
+        }
+      
+        .grid-gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 15px;
+        }
+        .grid-item {
+            position: relative;
+            overflow: hidden;
+            border-radius: 8px;
+            box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+            transition: transform 0.3s, box-shadow 0.3s;
+            aspect-ratio: 1/1; /* Membuat gambar persegi */
+        }
+        .grid-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+        }
+        .grid-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+        }
+        .grid-caption {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: rgba(0,0,0,0.7);
+            color: white;
+            padding: 10px;
+            text-align: center;
+            font-size: 0.9rem;
+            transform: translateY(100%);
+            transition: transform 0.3s;
+        }
+        .grid-item:hover .grid-caption {
+            transform: translateY(0);
+        }
+        .navigation-menu {
+            background-color: #333;
+            padding: 15px 0;
+            text-align: center;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 100;
+        }
+        .navigation-menu a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+            padding: 5px 8px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+            font-size: 0.9rem;
+        }
+        .navigation-menu a:hover {
+            background-color: #555;
+        }
+
+        /* Mobile Styles */
+        @media (max-width: 600px) {
+            .gallery-container {
+                margin-top: 80px;
+                padding: 0 10px;
+            }
+            h1 {
+                font-size: 1.5rem;
+                margin-bottom: 20px;
+            }
+            .grid-gallery {
+                grid-template-columns: repeat(2, 1fr); /* 2 kolom di mobile */
+                gap: 10px;
+            }
+            .grid-item {
+                border-radius: 6px;
+            }
+            .grid-caption {
+                padding: 8px;
+                font-size: 0.8rem;
+            }
+            .navigation-menu {
+                padding: 10px 0;
+            }
+            .navigation-menu a {
+                margin: 0 5px;
+                padding: 3px 6px;
+                font-size: 0.8rem;
+            }
+        }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -329,6 +439,42 @@
             <p class="message" style="animation-delay: 0.8s">Wishing you success in all your endeavors and the fulfillment of your heart's deepest desires.</p>
             <p class="message" style="animation-delay: 1s">Remember that you are cherished, valued, and truly one of a kind.</p>
             <p class="signature">With warmest regards,<br>Your Admirer</p>
+            <div class="gallery-container">
+                <div class="grid-gallery">
+                    <div class="grid-item">
+                        <img src="gambar/rs1.jpg" alt="City 1">
+                        <div class="grid-caption">Urban Landscape</div>
+                    </div>
+                    <div class="grid-item">
+                        <img src="gambar/rsantarahidupdanmati.jpg" alt="City 2">
+                        <div class="grid-caption">Downtown Skyline</div>
+                    </div>
+                    <div class="grid-item">
+                        <img src="gambar/rsboschbrand.jpg" alt="City 3">
+                        <div class="grid-caption">Night Lights</div>
+                    </div>
+                    <div class="grid-item">
+                        <img src="gambar/rsboschbrand.jpg" alt="City 4">
+                        <div class="grid-caption">Modern Architecture</div>
+                    </div>
+                    <div class="grid-item">
+                        <img src="gambar/rswildanimal.jpg" alt="City 5">
+                        <div class="grid-caption">Street View</div>
+                    </div>
+                    <div class="grid-item">
+                        <img src="gambar/starry.jpg" alt="City 6">
+                        <div class="grid-caption">Public Park</div>
+                    </div>
+                    <div class="grid-item">
+                        <img src="gambar/mbah.jpg" alt="City 7">
+                        <div class="grid-caption">Historical Building</div>
+                    </div>
+                    <div class="grid-item">
+                        <img src="gambar/sol.jpg" alt="City 8">
+                        <div class="grid-caption">Bridge Crossing</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
