--- a/wisuda.html
+++ b/wisuda.html
@@ -2,6 +2,8 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="gambar/logo.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="gambar/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selamat Wisuda</title>
     <style>
