--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                     <div class="product-actions">
-                        <a href="mamba.html" class="btn btn-beige">Dengan Foto</a>
+                        <a href="mambafoto.html" class="btn btn-beige">Dengan Foto</a>
                     </div>
                 </div>
             </div>
