--- a/pastelfoto.html
+++ b/pastelfoto.html
@@ -27,7 +27,7 @@
             background-color: var(--pastel-blue);
             color: var(--text-dark);
             overflow-x: hidden;
-            height: 100vh;
+            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
