--- a/pastelfoto.html
+++ b/pastelfoto.html
@@ -26,8 +26,8 @@
             font-family: 'Montserrat', sans-serif;
             background-color: var(--pastel-blue);
             color: var(--text-dark);
-            overflow: hidden;
-            height: 100vh;
+            overflow-x: hidden;
+            min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
