--- a/pastelfoto.html
+++ b/pastelfoto.html
@@ -78,8 +78,8 @@
             justify-content: flex-start; /* Konten dimulai dari atas */
             padding-top: 3rem; /* Ruang tambahan di atas */
              overflow-y: auto;
-            /* scrollbar-width: thin;
-            scrollbar-color: #c1f0d2 #c1f0d2; */
+            scrollbar-width: thin;
+            scrollbar-color: #c1f0d2 #c1f0d2;
         }
         
         .card.is-flipped {
