--- a/pastelfoto.html
+++ b/pastelfoto.html
@@ -26,7 +26,7 @@
             font-family: 'Montserrat', sans-serif;
             background-color: var(--pastel-blue);
             color: var(--text-dark);
-            overflow-x: hidden;
+            overflow: hidden;
             min-height: 100vh;
             display: flex;
             justify-content: center;
