--- a/pastelfoto.html
+++ b/pastelfoto.html
@@ -80,7 +80,7 @@
             flex-direction: column;
             overflow-y: auto;
         }
-
+        
         .card-front {
             background: linear-gradient(135deg, var(--pastel-pink), var(--pastel-peach));
             z-index: 2;
@@ -339,7 +339,7 @@
             <div class="card-face card-back">
                 <span class="floral-decoration floral-1">🌺</span>
                 <span class="floral-decoration floral-2">🌷</span>
-                <div class="content card-content">
+                <div class="content">
                     <h1>Happy Moments</h1>
                     <p>Wishing you joy, laughter, and all the happiness in the world.</p>
                     <p>May your days be as bright and beautiful as you are.</p>
