--- a/pastelfoto.html
+++ b/pastelfoto.html
@@ -146,6 +146,8 @@
             flex-direction: column;
             align-items: center;
             width: 100%;
+            overflow-y: auto;
+            scrollbar-width: thin;
         }
         
         .btn {
