--- a/pastelfoto.html
+++ b/pastelfoto.html
@@ -27,7 +27,7 @@
             background-color: var(--pastel-blue);
             color: var(--text-dark);
             overflow-x: hidden;
-            overflow-y: hidden;
+            overflow-y: auto;
             height: 75vh;
             display: flex;
             justify-content: center;
@@ -37,6 +37,7 @@
         
         .card-container {
             position: relative;
+            height: auto;
             width: 90%;
             max-width: 800px; /* Diperbesar untuk menampung konten */
             perspective: 1000px;
@@ -74,6 +75,7 @@
         }
         
         .card-back {
+            height: 70vh;
             background: linear-gradient(135deg, var(--pastel-mint), var(--pastel-lavender));
             transform: rotateY(180deg);
             overflow-y: auto;
