--- a/index.html
+++ b/index.html
@@ -423,6 +423,23 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Product 3 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="gambar/contoh4.png" alt="Greeting Card 3">
+                    <span class="product-badge">Baru</span>
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Birthday Invitation</h3>
+                    <p class="product-description">Undangan ulang tahun lucu dan unik</p>
+                    <div class="product-price">Rp 10.000</div>
+                    <div class="product-actions">
+                        <a href="birthdayinvit1.html" class="btn btn-beige">Preview</a>
+                        <button class="btn btn-pink">Beli Sekarang</button>
+                    </div>
+                </div>
+            </div>
         
             
         </div>
