--- a/wisuda.html
+++ b/wisuda.html
@@ -46,7 +46,7 @@
             width: 200px;
             height: auto;
             border-radius: 50%;
-            border: 5px solid #f8f8f8;
+            /* border: 5px solid #f8f8f8; */
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
 
@@ -123,7 +123,7 @@
         <div class="decoration bottom-right"></div>
         
         <div class="toga-container" id="toga">
-            <img src="gambar/maudy.jpg" alt="Topi Toga" class="toga-img">
+            <img src="gambar/zacky.jpeg" alt="Topi Toga" class="toga-img">
             <p>Klik untuk membuka pesan</p>
         </div>
         
