--- a/index.html
+++ b/index.html
@@ -435,7 +435,15 @@
                     <p class="product-description">Undangan ulang tahun lucu dan unik</p>
                     <div class="product-price">Rp 10.000</div>
                     <div class="product-actions">
+                        <a href="birthdayinvit.html" class="btn btn-beige">Preview</a>
+                        <button class="btn btn-pink">Beli Sekarang</button>
+                    </div>
+                    <div class="product-actions">
                         <a href="birthdayinvit1.html" class="btn btn-beige">Preview</a>
+                        <button class="btn btn-pink">Beli Sekarang</button>
+                    </div>
+                    <div class="product-actions">
+                        <a href="birthdayinvit2.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                 </div>
