--- a/birthdayinvit2.html
+++ b/birthdayinvit2.html
@@ -623,7 +623,7 @@
 
             <script>
             document.getElementById('waButton').addEventListener('click', function () {
-                window.open('https://wa.me/6281392304284?text=Halo%2C%20saya%20ingin%20melakukan%20RSVP.', '_blank');
+                window.open('https://wa.me/6281392304284?text=Halo%2C%20saya%20ingin%20melakukan%20RSVP.%0A%0ANama%20%3A%20%0AMakanan%20%3A%20%0AMinuman%20%3A', '_blank');
             });
             </script>
 
