digicam and spotify

--- a/envelope.html
+++ b/envelope.html
@@ -58,7 +58,7 @@
             animation: paperAppear 1s forwards; */
 
             
-            background-image: url('gambar/bg5.jpg');
+            background-image: url('gambar/bg1.jpeg');
             background-size: 100%;
             display: none;
             background-color: #fff9e6;
