--- a/envelopefoto.html
+++ b/envelopefoto.html
@@ -39,7 +39,7 @@
         }
         
         .letter-paper {
-            background-image: url('gambar/bg5.jpg');
+            background-image: url('gambar/bg1.jpeg');
             background-size: 100%;
             display: none;
             background-color: #fff9e6;
@@ -225,7 +225,7 @@
                 <h1 class="gallery-title">Masonry Gallery</h1>
                 <div class="masonry-gallery">
                     <div class="masonry-item">
-                        <img src="gambar/bg2.jpg" alt="Art 1">
+                        <img src="gambar/qr.jpeg" alt="Art 1">
                         <div class="masonry-caption">Abstract Painting</div>
                     </div>
                     <div class="masonry-item">
