digicam and spotify

--- a/digicam.html
+++ b/digicam.html
@@ -286,6 +286,7 @@
             
             .camera-screen {
                 height: auto;
+                margin-bottom: 20px;
             }
             
             .nav-wheel {
