--- a/digicam.html
+++ b/digicam.html
@@ -58,7 +58,7 @@
         
         .photo-display {
             width: 100%;
-            height: 95%;
+            height: 100%;
             background-color: #222;
             display: flex;
             justify-content: center;
@@ -278,6 +278,7 @@
             .screen-area {
                 margin-right: 15px;
                 width: 250px;
+                width: auto;
             }
             
             .controls-area {
