--- a/index.html
+++ b/index.html
@@ -808,6 +808,21 @@
                 </div>
             </div>
 
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="gambar/polaroid.png" alt="Greeting Card 5">
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Polaroid</h3>
+                    <p class="product-description">Kamera Polaroid untuk mencetak foto.</p>
+                    <div class="product-price">Rp 5.000</div>
+                    <div class="product-actions">
+                        <a href="polaroid1.html" class="btn btn-beige">Preview</a>
+                        <button class="btn btn-pink">Beli Sekarang</button>
+                    </div>
+                </div>
+            </div>
+
             <!-- Product 5 -->
             <div class="product-card">
                 <div class="product-image">
