--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             --pink-medium: #F8BBD0;
             --pink-dark: #F48FB1;
             --beige-light: #F5F5DC;
+            --beige: #FFFFD2;
             --beige-medium: #E8E0D5;
             --beige-dark: #D2C8BC;
             --text-dark: #555;
@@ -36,7 +37,7 @@
 
         /* Header */
         header {
-            background-color: var(--pink-dark);
+            background-color: #ff868e;
             padding: 20px 0;
             text-align: center;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
@@ -45,14 +46,17 @@
         .logo {
             font-size: 2.5rem;
             font-weight: 700;
-            color: var(--beige-light);
-            margin-bottom: 10px;
+            color: var(--beige);
+            margin-bottom: 5px;
+            letter-spacing: 3px;
             font-family: 'Cherry Bomb One';
         }
 
         .tagline {
             font-size: 1.2rem;
-            color: var(--beige-light);
+            color: var(--beige);
+            letter-spacing: 1px;
+            font-family: 'Cherry Bomb One';
         }
 
         /* Navigation */
