--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
                     <p class="product-description">Video yang ditampilkan layaknya cinema.</p>
                     <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
-                        <a href="cinema.html" class="btn btn-beige">Preview</a>
+                        <a href="bigcinema.html" class="btn btn-beige">Preview</a>
                         <button class="btn btn-pink">Beli Sekarang</button>
                     </div>
                 </div>
