--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         /* Header */
         header {
             background-color: #ff868e;
-            padding: 20px 0;
+            padding: 10px 0;
             text-align: center;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
@@ -501,7 +501,7 @@
         <div class="steps-container">
             <!-- Langkah 1 -->
             <div class="step">
-                <img src="https://via.placeholder.com/300x180/E75480/FFFFFF?text=Pesan+Bucket+Bunga" alt="Pesan Bucket Bunga" class="step-image">
+                <img src="gambar/cara1.png" alt="Pesan Bucket Bunga" class="step-image">
                 <div class="step-content">
                     <div class="step-number">1</div>
                     <h3 class="step-title">Pesan Bucket Bunga</h3>
@@ -511,7 +511,7 @@
             
             <!-- Langkah 2 -->
             <div class="step">
-                <img src="https://via.placeholder.com/300x180/E75480/FFFFFF?text=Pilih+Template" alt="Pilih Template" class="step-image">
+                <img src="gambar/cara2.png" alt="Pilih Template" class="step-image">
                 <div class="step-content">
                     <div class="step-number">2</div>
                     <h3 class="step-title">Pilih Template Website</h3>
@@ -531,7 +531,7 @@
             
             <!-- Langkah 4 -->
             <div class="step">
-                <img src="gambar/qr.jpeg" alt="Link dan QR" class="step-image">
+                <img src="gambar/cara4.png" alt="Link dan QR" class="step-image">
                 <div class="step-content">
                     <div class="step-number">4</div>
                     <h3 class="step-title">Dapatkan Link & QR</h3>
@@ -603,30 +603,19 @@
                     <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
                         <a href="pastel.html" class="btn btn-beige">Preview</a>
-                        <button class="btn btn-pink">Beli Sekarang</button>
+                        <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
+                        <button id="waButton" class="btn btn-pink">
+                        Beli Sekarang
+                        </button>
+
+                        <script>
+                        document.getElementById('waButton').addEventListener('click', function () {
+                            window.open('https://wa.me/6287746110370?text=Halo%2C%20saya%20ingin%20memesan%20website.%0A%0ANama%20%3A%20%0APesan%20%3A%20%0AFoto%20%3A', '_blank');
+                        });
+                        </script>
                     </div>
                     <div class="product-actions">
                         <a href="pastelfoto.html" class="btn btn-beige">Add on Gallery</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Product 4 -->
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="gambar/contoh3.png" alt="Greeting Card 4">
-                    <span class="product-badge">Terlaris</span>
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Graduation</h3>
-                    <p class="product-description">Kartu ucapan selamat wisuda untuk manusia kebannggaan disertai foto.</p>
-                    <div class="product-price">Rp 10.000</div>
-                    <div class="product-actions">
-                        <a href="wisuda.html" class="btn btn-beige">Preview</a>
-                        <button class="btn btn-pink">Beli Sekarang</button>
-                    </div>
-                    <div class="product-actions">
-                        <a href="wisudafoto.html" class="btn btn-beige">Add on Gallery</a>
                     </div>
                 </div>
             </div>
@@ -643,29 +632,19 @@
                     <div class="product-price">Rp 10.000</div>
                     <div class="product-actions">
                         <a href="mamba.html" class="btn btn-beige">Preview</a>
-                        <button class="btn btn-pink">Beli Sekarang</button>
+                        <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
+                         <button id="waButton" class="btn btn-pink">
+                        Beli Sekarang
+                        </button>
+
+                        <script>
+                        document.getElementById('waButton').addEventListener('click', function () {
+                            window.open('https://wa.me/6287746110370?text=Halo%2C%20saya%20ingin%20memesan%20website.%0A%0ANama%20%3A%20%0APesan%20%3A%20%0AFoto%20%3A', '_blank');
+                        });
+                        </script>
                     </div>
                     <div class="product-actions">
                         <a href="mambafoto2.html" class="btn btn-beige">Add on Gallery</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Product 5 -->
-            <div class="product-card">
-                <div class="product-image">
-                    <img src="gambar/contoh5.png" alt="Greeting Card 5">
-                </div>
-                <div class="product-info">
-                    <h3 class="product-title">Envelope</h3>
-                    <p class="product-description">Surat yang menampilkan kertas berisi ucapan dan lagu.</p>
-                    <div class="product-price">Rp 10.000</div>
-                    <div class="product-actions">
-                        <a href="envelope.html" class="btn btn-beige">Preview</a>
-                        <button class="btn btn-pink">Beli Sekarang</button>
-                    </div>
-                    <div class="product-actions">
-                        <a href="envelopefoto.html" class="btn btn-beige">Add on Gallery</a>
                     </div>
                 </div>
             </div>
@@ -681,10 +660,76 @@
                     <div class="product-price">Rp 10.000</div>
                     <div class="product-actions">
                         <a href="gold.html" class="btn btn-beige">Preview</a>
-                        <button class="btn btn-pink">Beli Sekarang</button>
+                        <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
+                        <button id="waButton" class="btn btn-pink">
+                        Beli Sekarang
+                        </button>
+
+                        <script>
+                        document.getElementById('waButton').addEventListener('click', function () {
+                            window.open('https://wa.me/6287746110370?text=Halo%2C%20saya%20ingin%20memesan%20website.%0A%0ANama%20%3A%20%0APesan%20%3A%20%0AFoto%20%3A', '_blank');
+                        });
+                        </script>
                     </div>
                     <div class="product-actions">
                         <a href="goldfoto.html" class="btn btn-beige">Add on Gallery</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Product 5 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="gambar/contoh5.png" alt="Greeting Card 5">
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Envelope</h3>
+                    <p class="product-description">Surat yang menampilkan kertas berisi ucapan dan lagu.</p>
+                    <div class="product-price">Rp 10.000</div>
+                    <div class="product-actions">
+                        <a href="envelope.html" class="btn btn-beige">Preview</a>
+                        <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
+                         <button id="waButton" class="btn btn-pink">
+                        Beli Sekarang
+                        </button>
+
+                        <script>
+                        document.getElementById('waButton').addEventListener('click', function () {
+                            window.open('https://wa.me/6287746110370?text=Halo%2C%20saya%20ingin%20memesan%20website.%0A%0ANama%20%3A%20%0APesan%20%3A%20%0AFoto%20%3A', '_blank');
+                        });
+                        </script>
+                    </div>
+                    <div class="product-actions">
+                        <a href="envelopefoto.html" class="btn btn-beige">Add on Gallery</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Product 4 -->
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="gambar/contoh3.png" alt="Greeting Card 4">
+                    <span class="product-badge">Terlaris</span>
+                </div>
+                <div class="product-info">
+                    <h3 class="product-title">Graduation</h3>
+                    <p class="product-description">Kartu ucapan selamat wisuda untuk manusia kebannggaan disertai foto.</p>
+                    <div class="product-price">Rp 10.000</div>
+                    <div class="product-actions">
+                        <a href="wisuda.html" class="btn btn-beige">Preview</a>
+                        <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
+                         <button id="waButton" class="btn btn-pink">
+                        Beli Sekarang
+                        </button>
+
+                        <script>
+                        document.getElementById('waButton').addEventListener('click', function () {
+                            window.open('https://wa.me/6287746110370?text=Halo%2C%20saya%20ingin%20memesan%20website.%0A%0ANama%20%3A%20%0APesan%20%3A%20%0AFoto%20%3A', '_blank');
+                        });
+                        </script>
+                    </div>
+                    <div class="product-actions">
+                        <a href="wisudafoto.html" class="btn btn-beige">Add on Gallery</a>
                     </div>
                 </div>
             </div>
@@ -700,7 +745,16 @@
                     <div class="product-price">Rp 5.000</div>
                     <div class="product-actions">
                         <a href="bnw.html" class="btn btn-beige">Preview</a>
-                        <button class="btn btn-pink">Beli Sekarang</button>
+                        <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
+                         <button id="waButton" class="btn btn-pink">
+                        Beli Sekarang
+                        </button>
+
+                        <script>
+                        document.getElementById('waButton').addEventListener('click', function () {
+                            window.open('https://wa.me/6287746110370?text=Halo%2C%20saya%20ingin%20memesan%20website.%0A%0ANama%20%3A%20%0APesan%20%3A%20%0AFoto%20%3A', '_blank');
+                        });
+                        </script>
                     </div>
                 </div>
             </div>
@@ -717,7 +771,16 @@
                     <div class="product-price">Rp 10.000</div>
                     <div class="product-actions">
                         <a href="gift.html" class="btn btn-beige">Preview</a>
-                        <button class="btn btn-pink">Beli Sekarang</button>
+                        <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
+                         <button id="waButton" class="btn btn-pink">
+                        Beli Sekarang
+                        </button>
+
+                        <script>
+                        document.getElementById('waButton').addEventListener('click', function () {
+                            window.open('https://wa.me/6287746110370?text=Halo%2C%20saya%20ingin%20memesan%20website.%0A%0ANama%20%3A%20%0APesan%20%3A%20%0AFoto%20%3A', '_blank');
+                        });
+                        </script>
                     </div>
                 </div>
             </div>
