--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
 
                         <script>
                         document.getElementById('waButton').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Halo%2C%20saya%20ingin%20memesan%20website.%0A%0ANama%20%3A%20%0APesan%20%3A%20%0AFoto%20%3A', '_blank');
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
                         });
                         </script>
                     </div>
@@ -639,7 +639,7 @@
 
                         <script>
                         document.getElementById('waButton').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Halo%2C%20saya%20ingin%20memesan%20website.%0A%0ANama%20%3A%20%0APesan%20%3A%20%0AFoto%20%3A', '_blank');
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%3A%0A%0ANama%3A%20%0APesan%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%3A%20(link%20drive)%0AAdd%20on%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
                         });
                         </script>
                     </div>
