--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
         .btn-pink {
             background-color: var(--pink-medium);
             color: var(--text-dark);
+            font-family: 'Poppins', sans-serif;
         }
 
         .btn-pink:hover {
@@ -486,6 +487,15 @@
         <div class="logo">Flomma Flower</div>
         <div class="tagline">Spread Your Love With Flomma</div>
     </header>
+<!-- <nav>
+        <ul>
+            <li><a href="#">Beranda</a></li>
+            <li><a href="#">Katalog</a></li>
+            <li><a href="#">Kategori</a></li>
+            <li><a href="#">Tentang Kami</a></li>
+            <li><a href="#">Kontak</a></li>
+        </ul>
+    </nav> -->
 
      <section class="tutorial-section">
         <!-- Gallery Slider Mobile -->
@@ -577,16 +587,6 @@
         </div>
     </section>
 
-    <!-- <nav>
-        <ul>
-            <li><a href="#">Beranda</a></li>
-            <li><a href="#">Katalog</a></li>
-            <li><a href="#">Kategori</a></li>
-            <li><a href="#">Tentang Kami</a></li>
-            <li><a href="#">Kontak</a></li>
-        </ul>
-    </nav> -->
-
     <div class="container">
         <h1 class="page-title">Greeting Card</h1>
 
@@ -633,13 +633,13 @@
                     <div class="product-actions">
                         <a href="mamba.html" class="btn btn-beige">Preview</a>
                         <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
-                         <button id="waButton" class="btn btn-pink">
+                        <button id="waButton" class="btn btn-pink">
                         Beli Sekarang
                         </button>
 
                         <script>
                         document.getElementById('waButton').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%3A%0A%0ANama%3A%20%0APesan%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%3A%20(link%20drive)%0AAdd%20on%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
                         });
                         </script>
                     </div>
@@ -667,7 +667,7 @@
 
                         <script>
                         document.getElementById('waButton').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Halo%2C%20saya%20ingin%20memesan%20website.%0A%0ANama%20%3A%20%0APesan%20%3A%20%0AFoto%20%3A', '_blank');
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
                         });
                         </script>
                     </div>
@@ -689,13 +689,13 @@
                     <div class="product-actions">
                         <a href="envelope.html" class="btn btn-beige">Preview</a>
                         <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
-                         <button id="waButton" class="btn btn-pink">
+                        <button id="waButton" class="btn btn-pink">
                         Beli Sekarang
                         </button>
 
                         <script>
                         document.getElementById('waButton').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Halo%2C%20saya%20ingin%20memesan%20website.%0A%0ANama%20%3A%20%0APesan%20%3A%20%0AFoto%20%3A', '_blank');
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
                         });
                         </script>
                     </div>
@@ -718,13 +718,13 @@
                     <div class="product-actions">
                         <a href="wisuda.html" class="btn btn-beige">Preview</a>
                         <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
-                         <button id="waButton" class="btn btn-pink">
+                        <button id="waButton" class="btn btn-pink">
                         Beli Sekarang
                         </button>
 
                         <script>
                         document.getElementById('waButton').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Halo%2C%20saya%20ingin%20memesan%20website.%0A%0ANama%20%3A%20%0APesan%20%3A%20%0AFoto%20%3A', '_blank');
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
                         });
                         </script>
                     </div>
@@ -746,13 +746,13 @@
                     <div class="product-actions">
                         <a href="bnw.html" class="btn btn-beige">Preview</a>
                         <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
-                         <button id="waButton" class="btn btn-pink">
+                        <button id="waButton" class="btn btn-pink">
                         Beli Sekarang
                         </button>
 
                         <script>
                         document.getElementById('waButton').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Halo%2C%20saya%20ingin%20memesan%20website.%0A%0ANama%20%3A%20%0APesan%20%3A%20%0AFoto%20%3A', '_blank');
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
                         });
                         </script>
                     </div>
@@ -772,13 +772,13 @@
                     <div class="product-actions">
                         <a href="gift.html" class="btn btn-beige">Preview</a>
                         <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
-                         <button id="waButton" class="btn btn-pink">
+                        <button id="waButton" class="btn btn-pink">
                         Beli Sekarang
                         </button>
 
                         <script>
                         document.getElementById('waButton').addEventListener('click', function () {
-                            window.open('https://wa.me/6287746110370?text=Halo%2C%20saya%20ingin%20memesan%20website.%0A%0ANama%20%3A%20%0APesan%20%3A%20%0AFoto%20%3A', '_blank');
+                            window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
                         });
                         </script>
                     </div>
@@ -979,7 +979,7 @@
                 <a href="https://www.instagram.com/flomma.flower?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a>
                 <a href="https://www.tiktok.com/@flomma.flower?is_from_webapp=1&sender_device=pc"><i class="fab fa-tiktok"></i></a>
                 <a href="https://g.co/kgs/PgCNJYo"><i class="fa fa-map-marker"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/6287746110370"><i class="fab fa-whatsapp"></i></a>
             </div>
             
             <p class="copyright">&copy; 2025 FLomma Flower. All Rights Reserved.</p>
