--- a/polaroid1.html
+++ b/polaroid1.html
@@ -286,6 +286,10 @@
                 <div class="polaroid-photo"><img src="https://picsum.photos/600/400?random=2" alt="Photo 2"></div>
                 <div class="polaroid-photo"><img src="https://picsum.photos/600/400?random=3" alt="Photo 3"></div>
                 <div class="polaroid-photo"><img src="https://picsum.photos/600/400?random=4" alt="Photo 4"></div>
+                <div class="polaroid-photo"><img src="https://picsum.photos/600/400?random=1" alt="Photo 1"></div>
+                <div class="polaroid-photo"><img src="https://picsum.photos/600/400?random=2" alt="Photo 2"></div>
+                <div class="polaroid-photo"><img src="https://picsum.photos/600/400?random=3" alt="Photo 3"></div>
+                <div class="polaroid-photo"><img src="https://picsum.photos/600/400?random=4" alt="Photo 4"></div>
             </div>
         </div>
     </div>
