--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
             
             <!-- Langkah 3 -->
             <div class="step">
-                <img src="https://via.placeholder.com/300x180/E75480/FFFFFF?text=Isi+Form" alt="Isi Form" class="step-image">
+                <img src="gambar/cara3.png" alt="Isi Form" class="step-image">
                 <div class="step-content">
                     <div class="step-number">3</div>
                     <h3 class="step-title">Klik Beli & Isi Form</h3>
