--- a/index.html
+++ b/index.html
@@ -633,12 +633,12 @@
                     <div class="product-actions">
                         <a href="mamba.html" class="btn btn-beige">Preview</a>
                         <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
-                        <button id="waButton" class="btn btn-pink">
+                        <button id="waButton1" class="btn btn-pink">
                         Beli Sekarang
                         </button>
 
                         <script>
-                        document.getElementById('waButton').addEventListener('click', function () {
+                        document.getElementById('waButton1').addEventListener('click', function () {
                             window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
                         });
                         </script>
@@ -661,12 +661,12 @@
                     <div class="product-actions">
                         <a href="gold.html" class="btn btn-beige">Preview</a>
                         <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
-                        <button id="waButton" class="btn btn-pink">
+                        <button id="waButton2" class="btn btn-pink">
                         Beli Sekarang
                         </button>
 
                         <script>
-                        document.getElementById('waButton').addEventListener('click', function () {
+                        document.getElementById('waButton2').addEventListener('click', function () {
                             window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
                         });
                         </script>
@@ -689,12 +689,12 @@
                     <div class="product-actions">
                         <a href="envelope.html" class="btn btn-beige">Preview</a>
                         <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
-                        <button id="waButton" class="btn btn-pink">
+                        <button id="waButton3" class="btn btn-pink">
                         Beli Sekarang
                         </button>
 
                         <script>
-                        document.getElementById('waButton').addEventListener('click', function () {
+                        document.getElementById('waButton3').addEventListener('click', function () {
                             window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
                         });
                         </script>
@@ -718,12 +718,12 @@
                     <div class="product-actions">
                         <a href="wisuda.html" class="btn btn-beige">Preview</a>
                         <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
-                        <button id="waButton" class="btn btn-pink">
+                        <button id="waButton4" class="btn btn-pink">
                         Beli Sekarang
                         </button>
 
                         <script>
-                        document.getElementById('waButton').addEventListener('click', function () {
+                        document.getElementById('waButton4').addEventListener('click', function () {
                             window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
                         });
                         </script>
@@ -746,12 +746,12 @@
                     <div class="product-actions">
                         <a href="bnw.html" class="btn btn-beige">Preview</a>
                         <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
-                        <button id="waButton" class="btn btn-pink">
+                        <button id="waButton5" class="btn btn-pink">
                         Beli Sekarang
                         </button>
 
                         <script>
-                        document.getElementById('waButton').addEventListener('click', function () {
+                        document.getElementById('waButton5').addEventListener('click', function () {
                             window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
                         });
                         </script>
@@ -772,12 +772,12 @@
                     <div class="product-actions">
                         <a href="gift.html" class="btn btn-beige">Preview</a>
                         <!-- <button class="btn btn-pink">Beli Sekarang</button> -->
-                        <button id="waButton" class="btn btn-pink">
+                        <button id="waButton6" class="btn btn-pink">
                         Beli Sekarang
                         </button>
 
                         <script>
-                        document.getElementById('waButton').addEventListener('click', function () {
+                        document.getElementById('waButton6').addEventListener('click', function () {
                             window.open('https://wa.me/6287746110370?text=Form%20Kebutuhan%20Greeting%20Card%20Flomma%20Flower%0A%0ANama%20%3A%20%0APesan%20%3A%20(sesuaikan%20dengan%20kebutuhan)%0AFoto%20%3A%20(link%20drive)%0AAdd%20on%20%3A%20%0A%0AFree%20request%20lagu%20dan%20domain%20(tergantung%20ketersediaan!!)', '_blank');
                         });
                         </script>
